WIP
-----------------------------
* General
  - Optimized and improved performance of most modules and widgets,
    with roughly 50-100% less overall CPU usage than previously.
  - Significantly optimized some resource-heavy widgets such as
    Trailing & Track map widgets with 5-10 times less CPU usage than previously.

* Engine Widget
  - Added "show_rpm_maximum" option,
    which shows maximum engine RPM (rev limit).

* Trailing Widget
  - Removed "show_vertical_style" option.

2.5.3 (2023-12-26)
-----------------------------
* General
  - Fixed a main APP window disappearing issue
    when using with multiple screens setup.
    Added auto position correction function to force
    main APP window stay on visible screen area.
    Thanks to @Capeta for helping with test.
  - Fixed incorrect enabled module count display on Module tab.
    Further improved module load/reload functions.
  - Fixed Reset dialog title text.

2.5.2 (2023-12-23)
-----------------------------
* General
  - Improved APP, API and modules closing speed.
  - Improved vehicle-class color selection function.
  - Improved heatmap color selection function.
  - Re-verify delta data after auto-correction.
  - Added minimum threshold for force ratio calculation.
  - Simplified module import & toggle function.
  - Ignore JSON file extension name case when loading.
  - Correctly restore minimized config window when accessing from tray menu.
  - Simplified tyre compound selection function.
  - Accessing "Restart API" will no longer trigger auto-hide while driving.

* User guide
  - Updated Navigation & Track map info.

2.5.1 (2023-12-05)
-----------------------------
* General
  - Fixed APP malfunction while switching API or reloading under rare cases.
  - Sort heatmap on load.
  - Add User guide & FAQ link to main window Help menu.
  - Reworked About window, add contributors tab.
  - Don't draw sector line on map if not available.
  - Various corrections & fixes.